--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Robotika
 email: simon.varga@brno.sdb.cz
 description: >- # this means to ignore newlines until "baseurl:"
   Stránka pre krúžok robotiky u saleziánov v Brne.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "Brno-SDB-Robotika" # the subpath of your site, e.g. /blog
+url: "vargac.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: vargac
 
 # Build settings
